08.Ingress-practical-1/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hogwarts-deployment
  labels:
    app: hogwarts-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hogwarts-app
  template:
    metadata:
      labels:
        app: hogwarts-app
    spec:
      containers:
      - name: hogwarts-container
        image: ravi943/hogwarts:1.0
        ports:
        - containerPort: 80
