08.Ingress-practical-1/pathbase-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
spec:
  rules:
  - host: harry.local
    http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: test1
            port:
              number: 80
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: test2
            port:
              number: 80
